[tool.poetry]
name = "heli-package_2.0_huzaifa"
version = "0.1.1"
description = "Test package for pypi"
authors = ["Huzaifa Naeem <huzaifa.naeem@datumlabs.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
